force-app/main/default/objects/Case/fields/Car_Service__c.field-meta.xml
<CustomField>
    <fullName>Car_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Service</label>
    <referenceTo>Car_Service__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>