force-app/main/default/objects/Case/fields/CarBrand__c.field-meta.xml
<CustomField>
    <fullName>CarBrand__c</fullName>
    <label>Car Brand</label>
    <length>20</length>
    <type>Text</type>
</CustomField>