force-app/main/default/objects/Case/fields/CarVinCode__c.field-meta.xml
<CustomField>
    <fullName>CarVinCode__c</fullName>
    <label>Car Vin Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>