force-app/main/default/objects/Case/listViews/Service_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Service_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Cases</label>
    <queue>Service_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>